# museum-htr-service

./: .env.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/v1/: corrections.py  evaluation.py  health.py  images.py  jobs.py  router.py
app/core/: config.py  errors.py  logging.py
app/db/: base.py  models.py
app/db/repositories/: images.py  jobs.py  results.py
app/ocr/evaluation/: metrics.py
app/ocr/pipeline/: result.py  service.py
app/ocr/postprocessing/: default_postprocessor.py
app/ocr/preprocessing/: default_preprocessor.py
app/ocr/recognition/: base.py  dummy_recognizer.py  factory.py  transformers_trocr_recognizer.py
app/ocr/segmentation/: base.py  dummy_segmenter.py  factory.py  kraken_segmenter.py  simple_line_segmenter.py
app/ocr/training/: dataset_service.py
app/schemas/: common.py  correction.py  evaluation.py  image.py  job.py
app/services/: correction_service.py  image_storage.py  upload_service.py
app/tools/: benchmark_models.py  cleanup_uploads.py  download_hf_model.py
app/workers/: broker.py  tasks.py
docker/: Dockerfile
docs/: OCR_PIPELINE.md
museum_ocr_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/unit/: test_metrics.py  test_postprocessing.py  test_simple_segmenter.py
