[project]
name = "museum-ocr-service"
version = "0.2.0"
description = "Async handwritten Russian OCR service for museum cards"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2.1",
    "alembic>=1.13.2",
    "redis>=5.0.8",
    "dramatiq[redis,watch]>=1.17.0",
    "pillow>=10.4.0",
    "orjson>=3.10.7",
    "python-json-logger>=2.0.7",
    "jiwer>=3.0.4",
    "rapidfuzz>=3.9.6",
]

[project.optional-dependencies]
ocr = [
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "huggingface-hub>=0.24.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.27.0",
    "safetensors>=0.4.4",
    "kraken>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.2",
    "black>=24.8.0",
    "mypy>=1.11.1",
    "types-redis>=4.6.0.20240806",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
exclude = ["alembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
